--- a/server/public/index.html
+++ b/server/public/index.html
@@ -22,7 +22,7 @@
 
             <div class="battery-container">
                 <div class="battery-progress">
-                    <span class="battery-value" id="battery">100%</span>
+                    <span class="battery-value" id="Bate">100%</span>
                 </div>
 
                 <span class="text">Battery</span>
@@ -31,7 +31,7 @@
             <div class="current">
                 <div class="current-container">
                     <div class="current-progress" id="current1">
-                        <span class="current-value" id="motor1">2</span>
+                        <span class="current-value" id="Amp1">2</span>
                     </div>
 
                     <span class="text">Motor 1</span>
@@ -39,7 +39,7 @@
 
                 <div class="current-container">
                     <div class="current-progress" id="current2">
-                        <span class="current-value" id="motor2">2</span>
+                        <span class="current-value" id="Amp2">2</span>
                     </div>
 
                     <span class="text">Motor 2</span>
@@ -54,11 +54,11 @@
                 <table>
                     <tr>
                         <th>Latitud:</th>
-                        <td>24°04'S</td>
+                        <td id="Lati"></td>
                     </tr>
                     <tr>
                         <th>Longitud:</th>
-                        <td>77°10'W</td>
+                        <td id="Long"></td>
                     </tr>
                 </table>
             </div>
@@ -85,7 +85,7 @@
                 <table>
                     <tr>
                         <th>Temp</th>
-                        <td id="myData"> 25 °C </td>
+                        <td id="Temp"> 25 °C </td>
                     </tr>
                     <tr>
                         <th>Wind Vel</th>
