new dark mode style

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -28,7 +28,7 @@
 
     <header>
         <div class="titulo"> 
-            <h1>Real Time Autonomous Saildrone</h1>
+            <h1>Real Time Autonomous Saildrone - RITA</h1>
         </div>
     </header>
 
@@ -82,7 +82,7 @@
 
     
         <div class="Middle">
-            <h3>RTA Geolocalization</h3>
+            <h3>RITA Localization</h3>
             <!--div class="mapa">
                 <img 
                     src="./img/map.png"
@@ -113,6 +113,7 @@
                         <td>270°</td>
                     </tr>
                 </table>
+                <canvas id="tempChart"></canvas>
             </div>
         </div>
 
@@ -130,9 +131,7 @@
     </footer-->
 
     <!-- JavaScript -->
-    <!--script src="./js/battery-script.js"></script-->
     <script src="./js/data-script.js"></script>
-    <!--script src="./server/index.js"></script-->
 
 </body>
 </html>
